--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # MONGODB_URI = 'mongodb+srv://nilamparmar120966:NilamP123213@e-commerce-website.fvnz2.mongodb.net/MERN?retryWrites=true&w=majority&appName=E-commerce-website'
 TOKEN_SECRET_KEY= "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://mern-ecommerce-omega-ebon.vercel.app
 MONGODB_URI = 'mongodb+srv://dharmikgadhiya52525:R789s73""""""@cluster0.2fmnmfc.mongodb.net/MERN?retryWrites=true&w=majority&appName=Cluster0'
